relay-pii/src/snapshots/relay_pii__convert__tests__no_scrub_object_with_safe_fields.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "request": {
    "url": "https://www.example.com/fr/testing/authenticate",
    "method": "POST",
    "data": {
      "credentials": {
        "email": "testing@example.com",
        "password": "[Filtered]"
      },
      "password": "[Filtered]",
      "submit": "Se connecter"
    }
  },
  "_meta": {
    "request": {
      "data": {
        "credentials": {
          "password": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 4
            }
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 4
          }
        }
      }
    }
  }
}
