relay-pii/src/snapshots/relay_pii__convert__tests__odd_keys.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "do not ,./<>?!@#$%^&*())'ßtrip'": "foo",
    "special ,./<>?!@#$%^&*())'gärbage'": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "special ,./<>?!@#$%^&*())'gärbage'": {
        "": {
          "rem": [
            [
              "strip-fields",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
