relay-pii/src/snapshots/relay_pii__convert__tests__pairlist_scrubbed_with_matching_values.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "threads": {
    "values": [
      {
        "stacktrace": {
          "frames": [
            {
              "vars": {
                "request": {
                  "headers": [
                    [
                      "some_random_value",
                      "[Filtered]"
                    ],
                    [
                      "some_random_value_2",
                      "abc"
                    ]
                  ]
                }
              }
            }
          ]
        }
      }
    ]
  },
  "_meta": {
    "threads": {
      "values": {
        "0": {
          "stacktrace": {
            "frames": {
              "0": {
                "vars": {
                  "request": {
                    "headers": {
                      "0": {
                        "1": {
                          "": {
                            "rem": [
                              [
                                "@password:filter",
                                "s",
                                0,
                                10
                              ]
                            ],
                            "len": 11
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}
