relay-pii/src/snapshots/relay_pii__convert__tests__regression_more_odd_keys.snap
---
source: relay-pii/src/convert.rs
expression: pii_config
---
{
  "applications": {
    "($string || $number || $array || $object) && !(debug_meta.** || $frame.filename || $frame.abs_path || $logentry.formatted || $error.value || $http.headers.user-agent) && !url && !message && !http.request.url && !'*url*' && !'*message*' && !'*http.request.url*'": [
      "@common:filter",
      "@ip:replace"
    ],
    "$http.env.REMOTE_ADDR || $user.ip_address || $sdk.client_ip || $span.sentry_tags.'user.ip' || attributes.'client.address'": [
      "@anything:remove"
    ],
    "$logentry.formatted || $log.body || $span.data.'gen_ai.input.messages' || attributes.'gen_ai.input.messages'.value || $span.data.'gen_ai.prompt' || attributes.'gen_ai.prompt'.value || $span.data.'gen_ai.request.messages' || attributes.'gen_ai.request.messages'.value || $span.data.'gen_ai.tool.call.arguments' || attributes.'gen_ai.tool.call.arguments'.value || $span.data.'gen_ai.tool.input' || attributes.'gen_ai.tool.input'.value || $span.data.'gen_ai.tool.call.result' || attributes.'gen_ai.tool.call.result'.value || $span.data.'gen_ai.tool.output' || attributes.'gen_ai.tool.output'.value || $span.data.'gen_ai.output.messages' || attributes.'gen_ai.output.messages'.value || $span.data.'gen_ai.response.tool_calls' || attributes.'gen_ai.response.tool_calls'.value || $span.data.'gen_ai.response.text' || attributes.'gen_ai.response.text'.value || $span.data.'gen_ai.response.object' || attributes.'gen_ai.response.object'.value || $span.data.'gen_ai.tool.definitions' || attributes.'gen_ai.tool.definitions'.value || $span.data.'gen_ai.request.available_tools' || attributes.'gen_ai.request.available_tools'.value || $span.data.'gen_ai.tool.name' || attributes.'gen_ai.tool.name'.value || $span.data.'mcp.prompt.result' || attributes.'mcp.prompt.result'.value || $span.data.'mcp.tool.result.content' || attributes.'mcp.tool.result.content'.value": [
      "@email:replace",
      "@creditcard:replace",
      "@iban:replace",
      "@usssn:replace",
      "@bearer:replace"
    ],
    "*.cookies.sentrysid || *.'http.request.header.cookie.sentrysid' || *.'http.response.header.set-cookie.sentrysid' || *.cookies.sudo || *.'http.request.header.cookie.sudo' || *.'http.response.header.set-cookie.sudo' || *.cookies.su || *.'http.request.header.cookie.su' || *.'http.response.header.set-cookie.su' || *.cookies.session || *.'http.request.header.cookie.session' || *.'http.response.header.set-cookie.session' || *.cookies.__session || *.'http.request.header.cookie.__session' || *.'http.response.header.set-cookie.__session' || *.cookies.sessionid || *.'http.request.header.cookie.sessionid' || *.'http.response.header.set-cookie.sessionid' || *.cookies.user_session || *.'http.request.header.cookie.user_session' || *.'http.response.header.set-cookie.user_session' || *.cookies.symfony || *.'http.request.header.cookie.symfony' || *.'http.response.header.set-cookie.symfony' || *.cookies.phpsessid || *.'http.request.header.cookie.phpsessid' || *.'http.response.header.set-cookie.phpsessid' || *.cookies.fasthttpsessionid || *.'http.request.header.cookie.fasthttpsessionid' || *.'http.response.header.set-cookie.fasthttpsessionid' || *.cookies.mysession || *.'http.request.header.cookie.mysession' || *.'http.response.header.set-cookie.mysession' || *.cookies.irissessionid || *.'http.request.header.cookie.irissessionid' || *.'http.response.header.set-cookie.irissessionid' || *.cookies._vercel_jwt || *.'http.request.header.cookie._vercel_jwt' || *.'http.response.header.set-cookie._vercel_jwt' || *.cookies.csrf || *.'http.request.header.cookie.csrf' || *.'http.response.header.set-cookie.csrf' || *.cookies.xsrf || *.'http.request.header.cookie.xsrf' || *.'http.response.header.set-cookie.xsrf' || *.cookies._xsrf || *.'http.request.header.cookie._xsrf' || *.'http.response.header.set-cookie._xsrf' || *.cookies._csrf || *.'http.request.header.cookie._csrf' || *.'http.response.header.set-cookie._csrf' || *.cookies.csrf-token || *.'http.request.header.cookie.csrf-token' || *.'http.response.header.set-cookie.csrf-token' || *.cookies.csrf_token || *.'http.request.header.cookie.csrf_token' || *.'http.response.header.set-cookie.csrf_token' || *.cookies.xsrf-token || *.'http.request.header.cookie.xsrf-token' || *.'http.response.header.set-cookie.xsrf-token' || *.cookies.xsrf_token || *.'http.request.header.cookie.xsrf_token' || *.'http.response.header.set-cookie.xsrf_token' || *.cookies.fastcsrf || *.'http.request.header.cookie.fastcsrf' || *.'http.response.header.set-cookie.fastcsrf' || *.cookies._iris_csrf || *.'http.request.header.cookie._iris_csrf' || *.'http.response.header.set-cookie._iris_csrf'": [
      "@anything:filter"
    ],
    "*.'http.request.header.cookie'.* || *.'http.request.header.cookie' || *.'http.response.header.set-cookie'.* || *.'http.response.header.set-cookie'": [
      "@cookies:filter"
    ]
  }
}
