relay-pii/src/snapshots/relay_pii__convert__tests__scrub_object.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "request": {
    "url": "https://www.example.com/fr/testing/authenticate",
    "method": "POST",
    "data": {
      "password": "[Filtered]",
      "profile": {
        "email": "testing@example.com",
        "password": null
      },
      "submit": "Se connecter"
    }
  },
  "_meta": {
    "request": {
      "data": {
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 4
          }
        },
        "profile": {
          "password": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "x"
                ]
              ]
            }
          }
        }
      }
    }
  }
}
