relay-pii/src/snapshots/relay_pii__convert__tests__stacktrace_paths_not_strippable.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "stacktrace": {
    "frames": [
      {
        "filename": "C:\\Windows\\BogusValue\\foo.txt",
        "abs_path": "C:\\Windows\\BogusValue\\foo.txt"
      }
    ]
  }
}
